cfn_benchmark/cfn_templates/walkerpr__aws_kubernetes_infrastructure_with_central_services/common/files/cloudFormationTemplates/CentralServices/childTemplates/sampleCentralServicesDNS.yaml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Parameters:
          - pEnvironment
          - pDomain
Parameters:
  pSampleEnv:
    Type: String
    Description: Production? Test?
    AllowedValues:
      - prod
      - test
  pEnvironment:
    Type: String
    Description: Development? Test Upstream? Prod Upstream?
    AllowedValues:
      - dev
      - upprod
      - uptest
  pDomain:
    Description: The domain representing the environment (ex. sample.sample.dev or sample.sample.dev)
    Type: String
    AllowedValues:
      - sample
      - sample
  pUptestResolverIP0:
    Type: String
  pUptestResolverIP1:
    Type: String
  pUpprodResolverIP0:
    Type: String
  pUpprodResolverIP1:
    Type: String
Conditions:
  DevEnvironment: !Equals
    - !Ref pEnvironment
    - "dev"
  NotDevEnvironment: !Not
    - Condition: DevEnvironment
Resources:
  sampleCentralServicesRoute53Zone0:
    Type: AWS::Route53::HostedZone
    DeletionPolicy: Delete
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for ${pEnvironment}.${pDomain}.dev"
      Name: !Sub ${pEnvironment}.${pDomain}.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  # sampleCentralServicesRoute53Zone:
  #   Type: AWS::Route53::HostedZone
  #   DeletionPolicy: Delete
  #   Properties:
  #     HostedZoneConfig:
  #       Comment: !Sub "Hosted zone for sample.${pDomain}.sample.dev"
  #     Name: !Sub sample.${pDomain}.sample.dev
  #     VPCs:
  #       - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  #         VPCRegion: us-gov-west-1
  sampleCentralServicesRoute53ZoneID:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/route53/${pEnvironment}-${pDomain}-dev/id"
      Type: String
      Value: !Ref sampleCentralServicesRoute53Zone0
      Description: SSM Parameter for sample Dev Route53
  sampleCentralServicesRoute53ZoneName:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/route53/${pEnvironment}-${pDomain}-dev/name"
      Type: String
      Value: !Sub ${pEnvironment}.${pDomain}.dev
      Description: SSM Parameter for sample Dev Route53
  sampleCentralServicesRoute53SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "53"
          ToPort: "53"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: udp
          FromPort: "53"
          ToPort: "53"
          CidrIp: "0.0.0.0/0"
  sampleCentralServicesRoute53ResolverInbound:
    Condition: NotDevEnvironment
    DependsOn:
      - sampleCentralServicesRoute53SecurityGroup
      - sampleCentralServicesRoute53Zone0
    Type: AWS::Route53Resolver::ResolverEndpoint
    Properties:
      Direction: INBOUND
      IpAddresses:
        - SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Name: !Sub ${pEnvironment}-${pDomain}-dev-inbound-resolver
      ResolverEndpointType: IPV4
      SecurityGroupIds:
        - !GetAtt sampleCentralServicesRoute53SecurityGroup.GroupId
  sampleCentralServicesRoute53ResolverOutbound:
    Condition: DevEnvironment
    DependsOn:
      - sampleCentralServicesRoute53SecurityGroup
      - sampleCentralServicesRoute53Zone0
    Type: AWS::Route53Resolver::ResolverEndpoint
    Properties:
      Direction: OUTBOUND
      IpAddresses:
        - SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Name: !Sub ${pEnvironment}-${pDomain}-dev-outbound-resolver
      ResolverEndpointType: IPV4
      SecurityGroupIds:
        - !GetAtt sampleCentralServicesRoute53SecurityGroup.GroupId
  sampleCentralServicesRoute53ResolverRuleUptest:
    Condition: DevEnvironment
    Type: AWS::Route53Resolver::ResolverRule
    Properties:
      DomainName: uptest.dev
      Name: Uptest
      ResolverEndpointId: !Ref sampleCentralServicesRoute53ResolverOutbound
      RuleType: sample
      TargetIps:
        -
          Ip: !Ref pUptestResolverIP0
          Port: 53
        -
          Ip: !Ref pUptestResolverIP1
          Port: 53
  sampleCentralServicesRoute53ResolverRuleUpprod:
    Condition: DevEnvironment
    Type: AWS::Route53Resolver::ResolverRule
    Properties:
      DomainName: upprod.dev
      Name: Upprod
      ResolverEndpointId: !Ref sampleCentralServicesRoute53ResolverOutbound
      RuleType: sample
      TargetIps:
        -
          Ip: !Ref pUpprodResolverIP0
          Port: 53
        -
          Ip: !Ref pUpprodResolverIP1
          Port: 53

  sampleCentralServicesRoute53ResolverRuleAssociationUptest:
    Condition: DevEnvironment
    Type: AWS::Route53Resolver::ResolverRuleAssociation
    Properties:
      Name: Uptest
      ResolverRuleId: !Ref sampleCentralServicesRoute53ResolverRuleUptest
      VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  sampleCentralServicesRoute53ResolverRuleAssociationUpprod:
    Condition: DevEnvironment
    Type: AWS::Route53Resolver::ResolverRuleAssociation
    Properties:
      Name: Upprod
      ResolverRuleId: !Ref sampleCentralServicesRoute53ResolverRuleUpprod
      VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"

  sampleCentralServicesVPCDHCPOptionSet:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !Sub ${pEnvironment}.${pDomain}.dev
      DomainNameServers:
        - AmazonProvidedDNS
  sampleCentralServicesVPCDHCPOptionSetAssociation:
    DependsOn: sampleCentralServicesVPCDHCPOptionSet
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      DhcpOptionsId: !Ref sampleCentralServicesVPCDHCPOptionSet
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  sampleRoute53LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /aws/route53/loggroup
      RetentionInDays: 365
  sampleRoute53QueryLogConfig:
    Type: AWS::Route53Resolver::ResolverQueryLoggingConfig
    Properties:
      DestinationArn: !GetAtt sampleRoute53LogGroup.Arn
      Name: sampleRoute53QueryLog
  sampleRoute53QueryLogAssociation:
    Type: AWS::Route53Resolver::ResolverQueryLoggingConfigAssociation
    Properties:
      ResolverQueryLogConfigId: !Ref sampleRoute53QueryLogConfig
      ResourceId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
Outputs:
  sampleCentralServicesRoute53Zone:
    Value: !Ref sampleCentralServicesRoute53Zone0
