cfn_benchmark/cfn_templates/walkerpr__aws_kubernetes_infrastructure_with_central_services/common/files/cloudFormationTemplates/CentralServices/childTemplates/sampleCentralServicesEndpoints.yaml
Parameters:
  pEnvironment:
    Type: String
    Description: Development? Test Upstream? Prod Upstream?
    AllowedValues:
      - dev
      - upprod
      - uptest
  pSampleEnv:
    Type: String
    Description: Production? Test?
    AllowedValues:
      - prod
      - test
  pSubnetsampleZId:
    Type: String
Conditions:
  SubnetA: !Equals
    - !Ref pSubnetsampleZId
    - "usgw1-az2"
  Dev: !Equals
    - !Ref pEnvironment
    - "dev"
Resources:
  DEVOPSNLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  DEVOPSNLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0c14c05f35fe603e2'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref DEVOPSNLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  DEVOPSRoute53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for sample.sample.sample.dev"
      Name: !Sub sample.sample.sample.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  DEVOPSServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref DEVOPSRoute53Zone
      RecordSets:
        - Name: services.sample.sample.sample.dev
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt DEVOPSNLBEndpoint.DnsEntries ] ] ]
  DEVOPSNLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/devops/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt DEVOPSNLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for DEVOPSNLBEndpoint DNS
  CS1NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  CS1NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0f0a37c5bfdd89057'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref CS1NLBSecurityGroup
      SubnetIds:
          - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  CS1Route53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for sample.sample.sample.dev"
      Name: !Sub c1.sample.sample.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  CS1ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref CS1Route53Zone
      RecordSets:
        - Name: "*.sample1.c1.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt CS1NLBEndpoint.DnsEntries ] ] ]
  CS1NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/CS1/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt CS1NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for CS1NLBEndpoint DNS
  ACCT2NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  ACCT2NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-037189fdb68846496'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref ACCT2NLBSecurityGroup
      SubnetIds:
          - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  ACCT2Route53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for Communals"
      Name: !Sub acct2.sample.sample.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  ACCT2ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ACCT2Route53Zone
      RecordSets:
        - Name: "*.sample1.acct2.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt ACCT2NLBEndpoint.DnsEntries ] ] ]
  ACCT2NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/ACCT2/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt ACCT2NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for ACCT2NLBEndpoint DNS
  ACCT3NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  ACCT3NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-05b1c1016d71920ea'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref ACCT3NLBSecurityGroup
      SubnetIds:
          - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  ACCT3Route53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for Communals"
      Name: !Sub acct3.sample.sample.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  ACCT3ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ACCT3Route53Zone
      RecordSets:
        - Name: "*.sample1.acct3.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt ACCT3NLBEndpoint.DnsEntries ] ] ]
  ACCT3NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/ACCT3/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt ACCT3NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for ACCT3NLBEndpoint DNS
  CVNSS1NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  CVNSS1NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0caba5dbc4f55b0ee'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref CVNSS1NLBSecurityGroup
      SubnetIds:
          - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  CVNSS1Route53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for Communals"
      Name: !Sub cvnss1.dev.air.com
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  CVNSS1ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref CVNSS1Route53Zone
      RecordSets:
        - Name: "*.sample1.cvnss1.dev.air.com"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt CVNSS1NLBEndpoint.DnsEntries ] ] ]
  CVNSS1NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/CVNSS1/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt CVNSS1NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for CVNSS1NLBEndpoint DNS
  UpprodNLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: Dev
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  UpprodNLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: Dev
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-015fa58fad43c9557'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref UpprodNLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  UpprodSecNLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: Dev
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-07062987a83624e58'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref UpprodNLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  UpprodServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Condition: Dev
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: app.0.upstream.upprod.dev
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt UpprodNLBEndpoint.DnsEntries ] ] ]
  UpprodSecServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Condition: Dev
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: sec.0.upstream.upprod.dev
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt UpprodSecNLBEndpoint.DnsEntries ] ] ]
  UpprodNLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Condition: Dev
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/upprod/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt UpprodNLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for UpprodNLBEndpoint DNS
  UptestNLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: Dev
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  UptestNLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: Dev
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-00ca2ea0db0a8a5ba'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref UptestNLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
  UptestSecNLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Condition: Dev
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0158e7f52950cdeb4'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref UptestNLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
  UptestServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Condition: Dev
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: app.0.upstream.uptest.dev
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt UptestNLBEndpoint.DnsEntries ] ] ]
  UptestSecServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Condition: Dev
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: sec.0.upstream.uptest.dev
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt UptestSecNLBEndpoint.DnsEntries ] ] ]
  UptestNLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Condition: Dev
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/uptest/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt UptestNLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for UptestNLBEndpoint DNS
  EC2InterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  ELBInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.elasticloadbalancing'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  IAMInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.iam'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  S3InterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  EC2MessagesInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  SSMMessagesInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  SSMInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SubnetIds:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/e/id}}"
      SecurityGroupIds:
        - !Ref endPointSecurityGroup
  endPointSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow HTTPS traffic from the VPC'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  ExampleRoute53Zone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Sub "Hosted zone for sample.sample.sample.dev"
      Name: !Sub sd.sample.sample.dev
      VPCs:
        - VPCId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
          VPCRegion: us-gov-west-1
  ExampleC1NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  ExampleC1NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0b31fb1f3847951e0'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref ExampleC1NLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
  ExampleC1ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ExampleRoute53Zone
      RecordSets:
        - Name: "*.communal1.sample.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt ExampleC1NLBEndpoint.DnsEntries ] ] ]
  ExampleC1NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/ExampleC1/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt ExampleC1NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for ExampleC1NLBEndpoint DNS
  EXAMPLEACCT2NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  EXAMPLEACCT2NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-093c6165dc54d0c12'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref EXAMPLEACCT2NLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
  EXAMPLEACCT2ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ExampleRoute53Zone
      RecordSets:
        - Name: "*.communal2.sample.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt EXAMPLEACCT2NLBEndpoint.DnsEntries ] ] ]
  EXAMPLEACCT2NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/ExampleACCT2/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt EXAMPLEACCT2NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for EXAMPLEACCT2NLBEndpoint DNS
  EXAMPLEACCT3NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  EXAMPLEACCT3NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-0d886eb042890f926'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref EXAMPLEACCT3NLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
  EXAMPLEACCT3ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ExampleRoute53Zone
      RecordSets:
        - Name: "*.acct3.sample.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt EXAMPLEACCT3NLBEndpoint.DnsEntries ] ] ]
  EXAMPLEACCT3NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/EXAMPLEACCT3/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt EXAMPLEACCT3NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for EXAMPLEACCT3NLBEndpoint DNS
  ExampleCL6NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "6443"
          ToPort: "6443"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
        - IpProtocol: tcp
          FromPort: "5000"
          ToPort: "5000"
          SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/cidr/prefix}}"
  ExampleCL6NLBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: 'com.amazonaws.vpce.us-gov-west-1.vpce-svc-066fe73f1bf381783'
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      SecurityGroupIds:
        - !Ref ExampleCL6NLBSecurityGroup
      SubnetIds:
        !If
          - SubnetA
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
          - - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
  ExampleCL6ServerRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Ref ExampleRoute53Zone
      RecordSets:
        - Name: "*.acct6.sample.sample.sample.dev"
          Type: CNAME
          TTL: 900
          ResourceRecords:
            - !Select [1, !Split [ ":", !Select [0, !GetAtt ExampleCL6NLBEndpoint.DnsEntries ] ] ]
  ExampleCL6NLBEndpointParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/endpoint/ExampleACCT6/dns"
      Type: String
      Value: !Select [1, !Split [ ":", !Select [0, !GetAtt ExampleCL6NLBEndpoint.DnsEntries ] ] ]
      Description: SSM Parameter for ExampleCL6NLBEndpoint DNS
